--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,12 @@ main {
   flex-wrap: wrap;
   justify-content: flex-start;
   gap: 100px;
+  padding-bottom: 3000px;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: center;
 }
 
 .empty {
@@ -139,3 +145,78 @@ table tbody tr td:nth-child(2) {
   font-weight: bold;
   color: #6b6c70;
 }
+
+
+
+.btn {
+  margin-top: 30px;
+  float: right;
+  width: 120px;
+  height: 40px;
+  font-size: 1.4em;
+  border: none;
+  cursor: pointer;
+  background: #878787;
+  color: #fff;
+  border-radius: 5px;
+}
+
+#create-button:hover {
+  background: #6b6c70;
+}
+
+#create-button:active {
+  background: #878787;
+}
+
+#create-note {
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+  width: 400px;
+  border-radius: 10px;
+  padding: 40px;
+  box-shadow: 0px 6px 20px 0px rgba(66, 68, 90, 0.31);
+  background: #e8eaf5;
+}
+
+#create-note input, #create-note textarea{
+  border: none;
+  background: #e8eaf5;
+}
+
+#title input::placeholder, #title textarea::placeholder {
+  color: #878787;
+}
+
+#title {
+  height: 40px;
+  font-size: 1.5em;
+  color: #565656;
+}
+
+#category {
+  border: none;
+  height: 40px;
+  cursor: pointer;
+  background: #e8eaf5;
+  font-size: 1.3em;
+  color: #565656;
+}
+
+#category option:disabled {
+  color: yellow;
+}
+
+#content {
+  margin-top: 30px;
+  height: 60px;
+  color: #565656;
+  resize: none;
+}
+
+#title:focus, #content:focus, #category:focus {
+  border: none;
+  outline: none;
+}
+
